--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typescript-eslint": "^7.18.0"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "openapi-backend": "^5.10.6",
