--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cc-api-sandbox",
   "packageManager": "yarn@4.4.1",
   "license": "Apache-2.0",
+  "version": "0.1.0",
   "devDependencies": {
     "@eslint/js": "^9.10.0",
     "@tsconfig/node20": "^20.1.4",
