First pass at adding tests

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Manual Additions
+
+### Jest ###
+junit.xml
+
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,intellij,windows,linux,macos,vim,yarn,node,dotenv,git
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,intellij,windows,linux,macos,vim,yarn,node,dotenv,git
 
