--- a/.github/workflows/lint-spec.yml
+++ b/.github/workflows/lint-spec.yml
@@ -2,7 +2,10 @@ name: Vacuum open API linting
 run-name: Linting OpenAPI spec with Vacuum
 on: [push]
 jobs:
-  vaccum-lint:
-    name: Vacuum Lint
-    run: curl -fsSL https://quobix.com/scripts/install_vacuum.sh | sh && vacuum lint specs/*
-    shell: bash
+  vacuum-lint:
+    runs-on: ubuntu-24.04
+    steps:
+    - uses: actions/checkout@v4
+    - name: Lint specs with Vacuum
+      run: curl -fsSL https://quobix.com/scripts/install_vacuum.sh | sh && vacuum lint specs/*
+      shell: bash
