Refactored to allow for faster and more complete testing
This improves the testing methodology a lot while maintaining the
core integration test that actually listens on a port and proves
that it's working, while also not requiring that a fresh copy
of the server be launched each time.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.16.5",
     "@types/source-map-support": "^0",
+    "@types/supertest": "^6.0.2",
     "@types/wait-on": "^5.3.4",
     "axios": "^1.7.7",
     "axios-mock-adapter": "^1.22.0",
@@ -26,6 +27,7 @@
     "nodemon": "^3.1.0",
     "pinst": "^3.0.0",
     "prettier": "^3.2.5",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
