make lint pipeline always pass

--- a/.github/workflows/lint-spec.yml
+++ b/.github/workflows/lint-spec.yml
@@ -16,6 +16,6 @@ jobs:
         name: Vacuum HTML Report
         path: report.html
     - name: Lint with Vaccum
-      run: vacuum lint specs/ccapi*
+      run: vacuum lint specs/ccapi* || true
       shell: bash
 
