--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,4 @@
 ---
-
 name: NodeJS/NPM Release
 
 on:
@@ -15,7 +14,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-
       - uses: actions/checkout@v4
         with:
           token: ${{ secrets.GIT_REPO_ADMIN_PAT }}
@@ -27,7 +25,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20.x
-          registry-url: 'https://registry.npmjs.org'
+          registry-url: "https://registry.npmjs.org"
 
       - name: Get npm cache directory
         id: npm-cache-dir
@@ -74,4 +72,3 @@ jobs:
           PR_NUMBER=$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")
 
           gh pr comment $PR_NUMBER -b "Created a new release version for this PR - [v${{ steps.bump-version.outputs.new-version }}](${{ github.event.repository.html_url }}/releases/tag/v${{ steps.bump-version.outputs.new-version }})"
-
