--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,8 +1,11 @@
 {
   "extends": "./tsconfig.json",
+  "compilerOptions": {
+    "allowJs": true
+  },
   "include": [
     "src/**/*.ts",
-    "src/**/*.js",
+    "package.json",
     "eslint.config.mjs",
     "jest.config.ts"
   ]
