--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -11,7 +11,7 @@ name: Publish Docker image
 
 on:
   push:
-    branches: [ 'main', 'dev*', 'v1*', '1.*' ]
+    branches: [ 'main', 'dev*', 'v1*', '1.*', ‘add-cd’ ]
     tags: [ 'v*.*.*', '1.*' ]
 
 jobs:
