--- a/.github/workflows/nodejs-yarn-unit-tests.yaml
+++ b/.github/workflows/nodejs-yarn-unit-tests.yaml
@@ -2,7 +2,7 @@ name: NodeJS/YARN Unit Tests
 
 on:
   workflow_dispatch:
-  pull_request_target:
+  pull_request:
     types: [opened, synchronize, reopened]
   push:
     branches:
