--- a/.github/workflows/nodejs-yarn-unit-tests.yaml
+++ b/.github/workflows/nodejs-yarn-unit-tests.yaml
@@ -57,11 +57,11 @@ jobs:
           name: npm-audit-results
           path: npm-audit-results.json
 
-      - name: SonarCloud Scan
-        if: success() || failure()
-        uses: SonarSource/sonarcloud-github-action@master
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      #- name: SonarCloud Scan
+      #  if: success() || failure()
+      #  uses: SonarSource/sonarcloud-github-action@master
+      #  env:
+      #    SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
       - uses: anchore/scan-action/download-grype@v4
         id: grype
