--- a/.github/workflows/nodejs-yarn-unit-tests.yaml
+++ b/.github/workflows/nodejs-yarn-unit-tests.yaml
@@ -7,20 +7,16 @@ on:
   push:
     branches:
       - main
-  workflow_call:
-    secrets:
-      SONAR_TOKEN:
-        required: true
 
 jobs:
   build:
     name: NodeJS/YARN Unit Tests
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      pull-requests: write
-      statuses: read
-      checks: read
+    permissions: write-all
+      # contents: read
+      # pull-requests: write
+      # statuses: read
+      # checks: read
     steps:
       - uses: actions/checkout@v4
         with:
