--- a/.github/workflows/nodejs-yarn-unit-tests.yaml
+++ b/.github/workflows/nodejs-yarn-unit-tests.yaml
@@ -91,15 +91,15 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Output results to markdown table as a comment on the PR for folk repo
-        if: (success() || failure()) && github.event_name == 'pull_request' && (github.event.pull_request.head.repo.full_name != github.repository)
-        run: |
-          echo '### Library Vulnerability scan results' > table.txt
-          echo -e 'The following vulnerabilities have been found in libraries included in the repository (some might be dependencies of dependencies).\n' >> table.txt
-          echo -e 'Critical and High severity vulnerabilities **must** be fixed before the PR can be merged, even if they are dependencies of dependencies.\n' >> table.txt
+      # - name: Output results to markdown table as a comment on the PR for folk repo
+      #   if: (success() || failure()) && github.event_name == 'pull_request' && (github.event.pull_request.head.repo.full_name != github.repository)
+      #   run: |
+      #     echo '### Library Vulnerability scan results' > table.txt
+      #     echo -e 'The following vulnerabilities have been found in libraries included in the repository (some might be dependencies of dependencies).\n' >> table.txt
+      #     echo -e 'Critical and High severity vulnerabilities **must** be fixed before the PR can be merged, even if they are dependencies of dependencies.\n' >> table.txt
 
-          jq -r '.matches[] |  [.artifact.name, .artifact.version, .vulnerability.severity, .vulnerability.fix.versions[0], .vulnerability.id, .vulnerability.dataSource] | @tsv' output.json | awk -v FS="\t" 'BEGIN{print "| Library | Vulnerable version | Severity | Fix version | Vulnerability ID |";print "| ------------ | ------------ | ------------ | ------------ | ------------ |"}{printf "| %s | %s | %s | %s | [%s](%s) |%s",$1,$2,$3,$4,$5,$6,ORS}' >> table.txt
-          sed -ie 's/Critical/**Critical** :red_circle:/g' table.txt
-          sed -ie 's/High/**High** :yellow_circle:/g' table.txt
+      #     jq -r '.matches[] |  [.artifact.name, .artifact.version, .vulnerability.severity, .vulnerability.fix.versions[0], .vulnerability.id, .vulnerability.dataSource] | @tsv' output.json | awk -v FS="\t" 'BEGIN{print "| Library | Vulnerable version | Severity | Fix version | Vulnerability ID |";print "| ------------ | ------------ | ------------ | ------------ | ------------ |"}{printf "| %s | %s | %s | %s | [%s](%s) |%s",$1,$2,$3,$4,$5,$6,ORS}' >> table.txt
+      #     sed -ie 's/Critical/**Critical** :red_circle:/g' table.txt
+      #     sed -ie 's/High/**High** :yellow_circle:/g' table.txt
 
-          cat table.txt
+      #     cat table.txt
