--- a/.github/workflows/nodejs-yarn-unit-tests.yaml
+++ b/.github/workflows/nodejs-yarn-unit-tests.yaml
@@ -7,6 +7,11 @@ on:
   push:
     branches:
       - main
+      
+  workflow_call:
+    secrets:
+      SONAR_TOKEN:
+        required: true
 
 jobs:
   build:
