--- a/.github/workflows/nodejs-yarn-unit-tests.yaml
+++ b/.github/workflows/nodejs-yarn-unit-tests.yaml
@@ -71,7 +71,7 @@ jobs:
         run: ${{steps.grype.outputs.cmd}} -v -o json --file output.json $FAIL_ON --only-fixed dir:.
 
       - name: Output results to markdown table as a comment on the PR 
-        if: always() && github.event_name == 'pull_request' && (github.event.pull_request.head.repo.full_name == github.repository)
+        if: always()
         run: |
           echo '### Library Vulnerability scan results' > table.txt
           echo -e 'The following vulnerabilities have been found in libraries included in the repository (some might be dependencies of dependencies).\n' >> table.txt
