--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@types/source-map-support": "^0",
     "@types/supertest": "^6.0.2",
     "@types/wait-on": "^5.3.4",
-    "axios": "^1.7.7",
+    "axios": "^1.8.2",
     "axios-mock-adapter": "^1.22.0",
     "concurrently": "^8.2.2",
     "eslint": "^9.14.0",
@@ -35,7 +35,7 @@
     "tsconfig-paths": "^4.2.0",
     "typescript": "~5.5.4",
     "typescript-eslint": "^8.13.0",
-    "wait-on": "^8.0.1"
+    "wait-on": "^8.0.3"
   },
   "dependencies": {
     "date-fns": "^4.1.0",
@@ -62,5 +62,12 @@
   "lint-staged": {
     "*.{js,ts,mjs,json,md,yml,yaml}": "yarn run prettier --write",
     "*.{ts,js,mjs}": "yarn run eslint --fix"
+  },
+  "resolutions": {
+    "cross-spawn": "7.0.5",
+    "path-to-regexp": "0.1.12",
+    "axios": "^1.8.2",
+    "@babel/helpers": "7.26.10",
+    "@babel/runtime": "7.26.10"
   }
 }
